添加路由中间件以及数据库服务

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
             "src/core/helpers.php"
         ],
         "psr-4":{
-            "wjcms\\framework\\":"src"
+            "wjcms\\framework\\":"src",
+            "App\\":"app"
         }
     }
 }
